Cấu hình OTP để lấy lại mật khẩu / thay đổi mật khẩu,  tạo chức năng feedback, thay đổi mật khẩu, schema mới
